--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ table th,table td{border:1px solid #ccc;padding:6px;text-align:center}
 
 <!-- Solana Web3 & SPL Token -->
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.91.0/lib/index.iife.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.7/lib/index.iife.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.7/dist/index.iife.js"></script>
 
 <script>
 (async function(){
@@ -232,3 +232,4 @@ setInterval(()=>{ if(detectWallets().length!==optionsEl.children.length) populat
 </script>
 </body>
 </html>
+
