--- a/index.html
+++ b/index.html
@@ -162,19 +162,50 @@ async function reclaimRent(){
 
   log(`🪣 Found ${empty.length} dust token account(s). Closing...`);
 
-  for(const t of empty){
-    const tokenPub=t.pubkey;
-    try{
-      const keys=[
-        {pubkey: tokenPub,isSigner:false,isWritable:true},
-        {pubkey:new solanaWeb3.PublicKey(publicKey),isSigner:false,isWritable:true},
-        {pubkey:new solanaWeb3.PublicKey(publicKey),isSigner:true,isWritable:false}
+  for (const t of empty) {
+    const tokenPub = t.pubkey;
+    const info = t.account.data.parsed.info;
+  
+    // 🛡️ Check ownership before attempting to close
+    if (info.owner !== publicKey) {
+      log(`⚠️ Skipping ${tokenPub.toString()} — owner mismatch (owned by ${info.owner})`);
+      continue;
+    }
+  
+    try {
+      const keys = [
+        { pubkey: tokenPub, isSigner: false, isWritable: true },
+        { pubkey: new solanaWeb3.PublicKey(publicKey), isSigner: false, isWritable: true },
+        { pubkey: new solanaWeb3.PublicKey(publicKey), isSigner: true, isWritable: false }
       ];
-      const ix=new solanaWeb3.TransactionInstruction({
+  
+      const ix = new solanaWeb3.TransactionInstruction({
         keys,
-        programId:new solanaWeb3.PublicKey(TOKEN_PROGRAM),
-        data:Uint8Array.from([9])
+        programId: new solanaWeb3.PublicKey(TOKEN_PROGRAM),
+        data: Uint8Array.from([9]) // close account
       });
+  
+      const tx = new solanaWeb3.Transaction().add(ix);
+      tx.feePayer = new solanaWeb3.PublicKey(publicKey);
+      const { blockhash } = await connection.getLatestBlockhash();
+      tx.recentBlockhash = blockhash;
+  
+      let sig;
+      if (wallet.signTransaction) {
+        const signedTx = await wallet.signTransaction(tx);
+        sig = await connection.sendRawTransaction(signedTx.serialize());
+      } else if (wallet.signAndSendTransaction) {
+        const res = await wallet.signAndSendTransaction(tx);
+        sig = res?.signature || res;
+      } else throw new Error('Wallet cannot sign transaction');
+  
+      await connection.confirmTransaction(sig, 'confirmed');
+      log(`✅ Closed ${tokenPub.toString()} — tx ${sig}`);
+    } catch (e) {
+      log(`❌ Failed ${tokenPub.toString()}: ${e?.message || e}`);
+    }
+  }
+
       const tx=new solanaWeb3.Transaction().add(ix);
       tx.feePayer=new solanaWeb3.PublicKey(publicKey);
       const {blockhash}=await connection.getLatestBlockhash();
@@ -210,3 +241,4 @@ setInterval(()=>{ if(detectWallets().length !== walletSelect.options.length-1) p
 </script>
 </body>
 </html>
+
